tests/ui/regions/regions-in-enums-anon.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/regions-in-enums-anon.rs:4:9
   |
LL |     Bar(&isize)
   |         ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ enum Foo<'a> {
LL ~     Bar(&'a isize)
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
